--- a/Scan QR code/Scan QR code/Base.lproj/Main.storyboard
+++ b/Scan QR code/Scan QR code/Base.lproj/Main.storyboard
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,23 +23,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fl-nl-8TI">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4fl-nl-8TI">
                                 <rect key="frame" x="91" y="252" width="192" height="200"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="192" id="2kG-YW-Sqh"/>
+                                    <constraint firstAttribute="height" constant="200" id="81v-uw-7zl"/>
+                                    <constraint firstAttribute="width" secondItem="4fl-nl-8TI" secondAttribute="height" multiplier="24:25" id="Qrs-41-TeY"/>
+                                </constraints>
                                 <state key="normal" image="focus"/>
                                 <connections>
                                     <segue destination="OkK-4L-H2J" kind="modal" id="jeY-NI-2Yc"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="QUICK SCAN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrc-yz-eNq">
-                                <rect key="frame" x="30" y="78" width="320" height="121"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="QUICK SCAN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mrc-yz-eNq">
+                                <rect key="frame" x="30" y="145" width="320" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="320" id="q05-qK-faT"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.23157488640000001" green="1" blue="0.16275370089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="mrc-yz-eNq" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="125" id="3vb-i6-4Ne"/>
+                            <constraint firstItem="4fl-nl-8TI" firstAttribute="top" secondItem="mrc-yz-eNq" secondAttribute="bottom" constant="53" id="ZSX-B4-bh0"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="4fl-nl-8TI" secondAttribute="bottom" constant="215" id="hzm-LY-Qdy"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="4fl-nl-8TI" secondAttribute="trailing" constant="76" id="qFH-vm-Fac"/>
+                            <constraint firstItem="mrc-yz-eNq" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="14" id="s43-AW-EXp"/>
+                            <constraint firstItem="4fl-nl-8TI" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="75" id="u63-SM-ndZ"/>
+                            <constraint firstItem="4fl-nl-8TI" firstAttribute="top" secondItem="mrc-yz-eNq" secondAttribute="bottom" constant="53" id="yTu-wR-iUk"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -56,11 +73,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DUG-ew-8wI">
-                                <rect key="frame" x="0.0" y="20" width="375" height="70"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DUG-ew-8wI">
+                                <rect key="frame" x="0.0" y="20" width="375" height="62"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Scan" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nd4-sW-KHh">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Scan!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nd4-sW-KHh">
                                         <rect key="frame" x="133" y="3" width="133" height="59"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="41"/>
@@ -68,24 +84,42 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ShB-RN-fr3">
-                                        <rect key="frame" x="0.0" y="-2" width="90" height="74"/>
+                                        <rect key="frame" x="0.0" y="-2" width="81" height="71"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <state key="normal" image="cross.png"/>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.23157488640000001" green="1" blue="0.16275370089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="LUn-DN-qfJ"/>
+                                    <constraint firstAttribute="width" secondItem="DUG-ew-8wI" secondAttribute="height" multiplier="375:62" id="SDO-ht-HgN"/>
+                                    <constraint firstAttribute="height" constant="62" id="rB7-TU-5yS"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No QR Code is detected" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTv-KQ-o0k">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No QR Code is detected" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GTv-KQ-o0k">
                                 <rect key="frame" x="0.0" y="618" width="375" height="49"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.23157488640000001" green="1" blue="0.16275370089999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="GTv-KQ-o0k" secondAttribute="height" multiplier="375:49" id="5B0-Vq-YbQ"/>
+                                    <constraint firstAttribute="height" constant="49" id="fim-wC-Rk1"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Sv1-2R-QzK" firstAttribute="top" secondItem="GTv-KQ-o0k" secondAttribute="bottom" id="4vL-an-sHR"/>
+                            <constraint firstItem="DUG-ew-8wI" firstAttribute="top" secondItem="hud-Hh-3bt" secondAttribute="bottom" id="8Ws-oV-lon"/>
+                            <constraint firstItem="GTv-KQ-o0k" firstAttribute="top" secondItem="DUG-ew-8wI" secondAttribute="bottom" constant="536" id="Bfd-L0-SmK"/>
+                            <constraint firstItem="DUG-ew-8wI" firstAttribute="leading" secondItem="S8U-Mi-R21" secondAttribute="leading" id="S0V-ca-bdz"/>
+                            <constraint firstItem="GTv-KQ-o0k" firstAttribute="leading" secondItem="S8U-Mi-R21" secondAttribute="leading" id="fsW-lf-Urp"/>
+                            <constraint firstAttribute="trailing" secondItem="DUG-ew-8wI" secondAttribute="trailing" id="rx1-PM-rfN"/>
+                            <constraint firstAttribute="trailing" secondItem="GTv-KQ-o0k" secondAttribute="trailing" id="tgZ-h4-fr2"/>
+                            <constraint firstItem="GTv-KQ-o0k" firstAttribute="top" secondItem="DUG-ew-8wI" secondAttribute="bottom" constant="536" id="zog-pr-bg0"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="messageLabel" destination="GTv-KQ-o0k" id="ELA-Lb-VEk"/>
@@ -94,7 +128,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CfB-CO-A2W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="615" y="124"/>
+            <point key="canvasLocation" x="613.60000000000002" y="123.68815592203899"/>
         </scene>
     </scenes>
     <resources>
